--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,16 @@ header {
   width: 100vw;
 }
 
+#heading {
+  font-size: 2.5rem;
+  text-align: center;
+  color: #b1454a;
+  padding-top: 30px;
+  z-index: -3;
+}
+
+
+
 #logo-svg {
     width: 2rem;
     height: 2rem;
@@ -54,3 +64,29 @@ header {
     padding-top: 10px;
     z-index: 1;
   }
+
+  /* Hamburger Menu Icon */
+label[for="menu-toggle"] {
+  cursor: pointer;
+  font-size: 50px;
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 2.5rem;
+  color: #b1454a;
+}
+
+#menu-toggle:checked + #menu-icon {
+  transform: rotate(90deg);
+}
+
+#menu-toggle:checked ~ #nav-menu {
+  display: block;
+}
+
+#menu-icon {
+  cursor: pointer;
+  font-size: 30px;
+  display: block; /* Initially hidden, will be displayed on smaller screens */
+}
