--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,25 @@ label[for="menu-toggle"] {
 }
 
 #quote1 {
-  display: block; /* Show quote 1 */
+  display: block; /* Show only quote 1 on mobile */
   word-spacing: 2px;
   text-align: center;
+}
+
+/* Youtube video */
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.video-container iframe {
+  position: absolute;
+  display: block;
+  top: 65rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
 }
