--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,9 +173,11 @@ label[for="menu-toggle"] {
 
 
 .quote {
+  position: relative;
   padding-left: 0.5rem;
   transform: scale(0.5rem);
   transition: all 1s ease-out;
+  top: 4rem;
 }
 
 #quote1 {
