--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,31 +143,31 @@ label[for="menu-toggle"] {
   top: 2rem;
   width: 100%; /* Taking up the full width of the page on mobile */
   height: auto; /* Keeping the original aspect ratio */
-  display: block; /* Centering the image */
+  display: block; 
   z-index: -1;
 }
 
 .biography-hero-image img {
-  width: 100%; /* Filling the entire width of the container */
-  height: auto; /* Maintaining the original aspect ratio */
-  display: block; /* Centering the image */
-  margin: 0 auto; /* Centering the image horizontally */
-  border-bottom-left-radius: 5%; /* Slight circular effect on the bottom left corner */
-  border-bottom-right-radius: 5%; /* Slight circular effect on the bottom right corner */
+  width: 100%;
+  height: auto; 
+  display: block; 
+  margin: 0 auto; 
+  border-bottom-left-radius: 5%;
+  border-bottom-right-radius: 5%;
   transition: all 0.9s;
   box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
 }
 
 /* Dates */
 .dates {
-  position: relative; /* Positioning relative to the parent container */
-  width: 100%; /* Filling the width of the container */
-  display: flex; /* Using flexbox for alignment */
-  flex-direction: row; /* Aligning the elements in a column */
-  align-items: center; /* Centering the content horizontally */
-  text-align: center; /* Centering the text */
-  font-family: "IM Fell Great Primer SC", sans-serif; /* Using the existing font */
-  margin-top: 1rem; /* Adding space above the dates */
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
+  text-align: center; 
+  font-family: "IM Fell Great Primer SC", sans-serif; 
+  margin-top: 1rem; 
   padding-bottom: 1rem;
   transition: all 1s;
   box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
@@ -176,28 +176,61 @@ label[for="menu-toggle"] {
 
 .born,
 .died {
-  font-size: 10px; /* Adjusting the font size for mobile devices */
+  font-size: 10px;
   transition: all 0.5s;
 }
 
 .date {
-  font-size: 28px; /* Adjusting the font size for the dates */
-  font-weight: bold; /* Making the dates bold */
-  margin-bottom: 5px; /* Adding space below the dates */
+  font-size: 28px;
+  font-weight: bold; 
+  margin-bottom: 5px; 
   transition: all 0.9s;
 }
 
 .separator {
-  display: block; /* Hiding the separator on mobile devices */
-  width: 50%; /* Filling the width of the container */
+  display: block;
+  width: 50%; 
   font-size: large;
 }
 
 .location {
-  font-size: 18px; /* Adjusting the font size for the location */
-  font-style: italic; /* Styling the location */
-  margin-bottom: 10px; /* Adding space below the location */
+  font-size: 18px; 
+  font-style: italic; 
+  margin-bottom: 10px; 
   transition: all 1.5s;
+}
+
+/* Biography Styles */
+.biography-section {
+  position: relative;
+  top: 3rem;
+  width: 100%;
+  padding: 1rem;
+  font-family: "IM Fell Great Primer SC", sans-serif; /* Vintage font */
+  background-color: #f9f4e0; /* Vintage background color */
+  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
+}
+
+.biography-title {
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 1rem;
+  color: #5a4e42; /* Vintage text color */
+}
+
+.biography-content {
+  align-self: center;
+  width: 90%; /* Allowing some padding around the content */
+  max-height: 305rem; /* Setting a maximum height for the scrollable container */
+  margin: 0 auto; /* Centering the container */
+  text-align: justify; /* Justifying the text */
+  line-height: 1.5; /* Improving readability */
+  color: #181614; /* Vintage text color */
+}
+
+.biography-content h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 /* explore-more button */
@@ -344,7 +377,7 @@ label[for="menu-toggle"] {
 }
 
 /* Footer Styles */
-footer {
+#site-footer  {
   list-style-type: none;
   color: #b33a3a; 
   padding: 5px 0; 
@@ -352,7 +385,18 @@ footer {
   word-spacing: 20px; 
   position: relative;
   left: 0; 
-  top: 85rem; 
+  width: 100%; 
+  z-index: 1;
+}
+
+#site-footer-bio {
+  list-style-type: none;
+  color: #b33a3a; 
+  padding: 5px 0; 
+  text-align: center; 
+  word-spacing: 20px; 
+  position: relative;
+  left: 0; 
   width: 100%; 
   z-index: 1;
 }
@@ -368,8 +412,21 @@ footer {
   padding: 0.5rem;
 }
 
+#site-footer-bio li {
+  font-size: 170%;
+  padding: 0.5rem;
+}
+
 #site-footer {
   list-style-type: none;
   background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
   box-shadow: #b1454a;
+  top: 85rem; 
+}
+
+#site-footer-bio {
+  list-style-type: none;
+  background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
+  box-shadow: #b1454a;
+  top: 5rem; 
 }
