--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,6 +399,80 @@ label[for="menu-toggle"] {
   padding: 20px;
 }
 
+/* Signup Container */
+.signup-container {
+  position: relative;
+  top: 10rem;
+  width: 80%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 30px;
+  background-color: #f7efdb;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  font-family: "IM Fell Great Primer SC", sans-serif;
+  color: #3a3a3a;
+  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
+}
+
+/* Join Us Heading */
+.signup-container h1 {
+  font-size: 2rem;
+  margin-bottom: 15px;
+  color: #b1454a;
+  transition: all 0.8s;
+}
+
+/* Signup Description */
+.signup-container p {
+  font-size: 1rem;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  transition: all 0.8s;
+}
+
+/* Signup Form */
+.signup-form {
+  display: grid;
+  gap: 15px;
+  transition: all 0.8s;
+}
+
+/* Form Labels */
+.signup-form label {
+  font-size: 0.9rem;
+  transition: all 0.8s;
+}
+
+/* Form Inputs */
+.signup-form input {
+  width: 100%;
+  padding: 10px;
+  border: 2px solid #c9b084;
+  background: #e2d5b7;
+  font-size: 0.9rem;
+  border-radius: 10px;
+  text-align: center;
+}
+
+/* Submit Button */
+.signup-form button {
+  margin-top: 50px;
+  padding: 10px 20px;
+  background-color: #b1454a;
+  border: none;
+  color: #ffffff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  border-radius: 8px;
+  transition: all 0.8s;
+}
+
+.signup-form button:hover {
+  background-color: #903a35;
+  transition: all 0.8s;
+}
 
 /* Footer Styles */
 #site-footer  {
