--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,8 @@ label[for="menu-toggle"] {
   font-size: 1.3rem;
   padding: 2rem;
   text-align: center;
-  display: block;
+  display: flex;
+  justify-content: center;
   background: rgba(0, 0, 0, 0.5);
   padding: 10px;
   color: #fff;
@@ -156,7 +157,6 @@ label[for="menu-toggle"] {
 #quote1 {
   word-spacing: 2px;
   text-align: center;
-  width: 100%;
 }
 
 #quote2 {
@@ -507,8 +507,6 @@ label[for="menu-toggle"] {
   z-index: 1;
 }
 
-
-
 #site-footer-signup {
   list-style-type: none;
   color: #b33a3a;
@@ -624,5 +622,126 @@ label[for="menu-toggle"] {
     list-style-type: none;
     background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
     box-shadow: #b1454a;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1024px) {
+  header {
+    padding: 0.5rem;
+  }
+
+  nav {
+    display: flex;
+    justify-content: center;
+    height: 70%;
+    position: relative;
+    left: 0;
+    right: 0;
+    background: none;
+    box-shadow: none;
+  }
+
+  nav li {
+    display: inline-block;
+    margin: 0 15px;
+  }
+
+  #menu-toggle,
+  label[for="menu-toggle"] {
+    display: none; /* Hide checkbox and label */
+  }
+
+  #quote4 {
+    top: 175rem;
+  }
+
+
+  .biography-hero-image img {
+    border-bottom-left-radius: 0;
+  }
+
+  .biography-hero-image {
+    width: 30%;
+    float: left;
+  }
+
+  .works-container {
+    position: relative;
+    flex-wrap: nowrap;
+  }
+
+  .video-container {
+    top: 70rem;
+    width: 100%;
+    z-index: -1;
+  }
+
+  .video-container iframe {
+    width: 100%;
+    height: 100%;
+  }
+
+  .literary-works {
+    top: 40rem;
+  }
+
+  .separator {
+    display: block;
+    font-size: 50px;
+    font-weight: 10;
+    margin: 10px;
+  }
+
+  .dates {
+    position: relative;
+    top: 1rem;
+    left: 10%;
+    right: 40%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 1px;
+  }
+
+  .born,
+  .died,
+  .date,
+  .separator,
+  .location {
+    text-align: center; /* Centering the text */
+  }
+
+  .biography-section {
+    position: absolute;
+    width: 50%;
+    padding-right: 1rem;
+    left: 40%;
+    z-index: -1;
+  }
+
+  .biography-content {
+    align-self: center;
+    width: 90%; /* Allowing some padding around the content */
+    max-height: 400px; /* Setting a maximum height for the scrollable container */
+    padding: 1rem;
+  }
+
+  .biography-title {
+    font-size: 28px;
+    margin-bottom: 1rem;
+    color: #5a4e42; /* Vintage text color */
+  }
+
+  .biography-section,
+  .literary-works {
+    background-size: 40px 40px;
+    padding: 2rem 2rem;
+  }
+
+  #site-footer {
+    top: 170vw;
   }
 }
