--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,10 +30,10 @@ main {
   flex: 1 0 auto;
 }
 
-/* section {
+ section {
   position: relative; 
   text-align: center;
-} */
+}
 
 /* header */
 header {
@@ -68,7 +68,7 @@ nav {
   width: 100%;
   left: 0;
   right: 0;
-  height: 10vh;
+  height: 12vh;
   padding: 1rem 1rem;
   box-shadow: 0 2px 2px #3a3a3a;
   display: none;
@@ -85,7 +85,7 @@ nav a {
 nav li {
   list-style-type: none;
   justify-content: center;
-  padding-top: 10px;
+  padding-top: 5px;
   z-index: 1;
 }
 
@@ -146,6 +146,7 @@ label[for="menu-toggle"] {
 /* Quotes Stylings */
 
 .quote {
+  position: relative;
   font-family: "IM Fell Great Primer SC", sans-serif;
   font-size: 1.3rem;
   align-content: center;
@@ -158,28 +159,24 @@ label[for="menu-toggle"] {
   transform: scale(0.5rem);
   transition: all 1s ease-out;
   top: 4rem;
+  word-spacing: 2px;
   width: 100%;
 }
 
 #quote1 {
-  word-spacing: 2px;
   text-align: center;
 }
 
 #quote2 {
-  position: relative;
-  word-spacing: 2px;
+
   top: 65rem;
 }
 
 #quote3 {
-  position: relative;
-  word-spacing: 2px;
   top: 75rem;
 }
 
 #quote4 {
-  position: relative;
   word-spacing: 2px;
   top: 6rem;
 }
@@ -284,7 +281,7 @@ label[for="menu-toggle"] {
 /* explore-more button */
 .explore-more {
   position: absolute;
-  bottom: 80px;
+  top: 45rem;
   left: 50%;
   transform: translateX(-50%);
   transition: all 0.9s;
@@ -667,8 +664,12 @@ label[for="menu-toggle"] {
     top: 75rem;
   }
 
+  #quote3 {
+    top: 85rem;
+  }
+
   #quote4 {
-    top: 233rem;
+    top: 10rem;
   }
 
 
@@ -729,27 +730,5 @@ label[for="menu-toggle"] {
 
   #site-footer-bio {
     top: 12rem;
-  }
-}
-
-/* Desktop and upwards */
-@media (min-width: 1200px) {
-  #quote2 {
-    top: 85rem;
-  }
-
-  #quote3 {
-    top: 158rem;
-  }
-
-  .video-container {
-    top: 20rem;
-    width: 100vw;
-    z-index: -1;
-  }
-
-  .video-container iframe {
-    width: 100%;
-    height: 100%;
   }
 }
