--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 /* Body */
 body {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
   background-image: linear-gradient(
       90deg,
       transparent 50%,
@@ -89,6 +89,26 @@ nav li {
   z-index: 1;
 }
 
+/* background image */
+.background-img {
+  transition: all 0.9s;
+  position: absolute;
+  background-image: url("../images/images_desktop/VELI-1.webp");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  height: 100vh;
+  width: 100%;
+  opacity: 3;
+  z-index: -1;
+}
+
+.background-img:hover {
+  opacity: 0.5;
+  transform: scale(1.05);
+}
+
 /* Hamburger Menu Icon */
 label[for="menu-toggle"] {
   display: none;
@@ -123,52 +143,30 @@ label[for="menu-toggle"] {
   display: block;
 }
 
-/* background image */
-.background-img {
-  transition: all 0.9s;
-  position: absolute;
-  background-image: url("../images/images_desktop/VELI-1.webp");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  object-fit: contain;
-  height: 100vh;
-  width: 100%;
-  opacity: 3;
-  z-index: -1;
-}
 
-.background-img:hover {
-  opacity: 0.5;
-  transform: scale(1.05);
-}
 
 /* Quotes Stylings */
 
 .quote {
   position: relative;
   font-family: "IM Fell Great Primer SC", sans-serif;
-  font-size: 1.3rem;
+  font-size: 1.0rem;
   align-content: center;
   display: flex;
   justify-content: center;
   background: rgba(0, 0, 0, 0.5);
-  padding: 10px;
   color: #fff;
   position: relative;
   transform: scale(0.5rem);
   transition: all 1s ease-out;
   top: 4rem;
   word-spacing: 2px;
+  padding: 1rem;
   width: 100%;
 }
 
-#quote1 {
-  text-align: center;
-}
 
 #quote2 {
-
   top: 65rem;
 }
 
@@ -186,21 +184,15 @@ label[for="menu-toggle"] {
 .biography-hero-image {
   position: relative;
   top: 2rem;
-  width: 100%;
-  height: auto;
-  display: block;
   z-index: -1;
+  overflow: hidden;
 }
 
 .biography-hero-image img {
   width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
   border-bottom-left-radius: 5%;
   border-bottom-right-radius: 5%;
   transition: all 0.9s;
-  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
 }
 
 /* Dates */
@@ -211,8 +203,7 @@ label[for="menu-toggle"] {
   flex-direction: row;
   align-items: center;
   text-align: center;
-  font-family: "IM Fell Great Primer SC", sans-serif;
-  margin-top: 1rem;
+  margin-top: 5rem;
   padding-bottom: 1rem;
   transition: all 1s;
   box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
@@ -252,7 +243,7 @@ label[for="menu-toggle"] {
   width: 100%;
   padding: 1rem;
   font-family: "IM Fell Great Primer SC", sans-serif;
-  background-color: #f9f4e0;
+  background-color: #cfccc1de;
   box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
 }
 
@@ -304,22 +295,14 @@ label[for="menu-toggle"] {
 }
 
 /* Youtube video */
-.video-container {
+iframe {
   position: relative;
-  width: 100%;
-  height: 0;
-  padding: 56.25% 0 0 0;
-  z-index: -1;
-}
-
-.video-container iframe {
-  position: absolute;
-  display: block;
   top: 70rem;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 40vh;
   box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
+  z-index: 1;
 }
 
 /* Literary Works */
@@ -605,31 +588,20 @@ label[for="menu-toggle"] {
     width: 100vw;
   }
 
-  #quote2 {
-    top: 80rem;
+  .biography-hero-image {
+    width: 80vw;
+    height: 60vh;
+    padding-left: 175px;
   }
 
-  #quote3 {
-    top: 95rem;
-  }
 
   #quote4 {
     top: 7rem;
   }
 
-  .video-container {
-    top: 20rem;
-  }
-
-  .literary-works {
-    top: 100rem;
-  }
-
-  #site-footer {
-    top: 108rem;
-    list-style-type: none;
-    background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
-    box-shadow: #b1454a;
+  iframe {
+    width: 80%;
+    height: 50vh;
   }
 }
 
@@ -660,37 +632,21 @@ label[for="menu-toggle"] {
     display: none;
   }
 
-  #quote2 {
-    top: 75rem;
-  }
-
-  #quote3 {
-    top: 85rem;
-  }
-
   #quote4 {
     top: 10rem;
   }
 
 
-  .biography-hero-image img {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .biography-hero-image {
-    width: 100%;
+    width: 80vw;
+    height: 60vh;
+    padding-left: 175px;
   }
 
-  .video-container {
-    top: 10rem;
-    width: 100vw;
-    z-index: -1;
-  }
 
-  .video-container iframe {
-    width: 100%;
-    height: 100%;
+  iframe {
+    width: 80%;
+    height: 70vh;
   }
 
   .literary-works {
@@ -702,15 +658,9 @@ label[for="menu-toggle"] {
   }
 
   .dates {
-    position: relative;
     top: 3rem;
-    left: 10%;
-    right: 40%;
+    left: 5%;
     width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
     margin-top: 1px;
   }
 
