--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,8 @@ main {
   flex: 1 0 auto;
 }
 
- section {
-  position: relative; 
+section {
+  position: relative;
   text-align: center;
 }
 
@@ -143,14 +143,12 @@ label[for="menu-toggle"] {
   display: block;
 }
 
-
-
 /* Quotes Stylings */
 
 .quote {
   position: relative;
   font-family: "IM Fell Great Primer SC", sans-serif;
-  font-size: 1.0rem;
+  font-size: 1rem;
   align-content: center;
   display: flex;
   justify-content: center;
@@ -164,7 +162,6 @@ label[for="menu-toggle"] {
   padding: 1rem;
   width: 100%;
 }
-
 
 #quote2 {
   top: 65rem;
@@ -454,7 +451,6 @@ iframe {
 /* Map Container */
 .map-container {
   position: relative;
-  top: 10rem;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -464,6 +460,7 @@ iframe {
 }
 
 .map-container iframe {
+  top: 10rem;
   border: 2px solid #b1454a;
   box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
   border-radius: 10px;
@@ -594,7 +591,6 @@ iframe {
     padding-left: 175px;
   }
 
-
   #quote4 {
     top: 7rem;
   }
@@ -632,17 +628,19 @@ iframe {
     display: none;
   }
 
+  #quote2 {
+    top: 68rem;
+  }
+
   #quote4 {
     top: 10rem;
   }
-
 
   .biography-hero-image {
     width: 80vw;
     height: 60vh;
     padding-left: 175px;
   }
-
 
   iframe {
     width: 80%;
@@ -674,11 +672,35 @@ iframe {
     padding: 2rem 2rem;
   }
 
+  .signup-container {
+    position: relative;
+    top: 20rem;
+    right: 26vw;
+    width: 50%;
+  }
+
+  .map-container {
+    top: 10rem;
+    width: 50%;
+  }
+
+  .map-container iframe {
+    position: relative;
+    left: 110%;
+    top: -27.5rem;
+    width: 90%;
+    height: 61vh;
+  }
+
   #site-footer {
     top: 100rem;
   }
 
   #site-footer-bio {
     top: 12rem;
+  }
+
+  #site-footer-signup {
+    top: 5rem;
   }
 }
