--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ header {
 
 nav {
   position: absolute;
-  top: 8vh;
+  top: 6vh;
   background-color: #c9b084;
   width: 100%;
   left: 0;
@@ -292,14 +292,9 @@ label[for="menu-toggle"] {
 }
 
 /* Youtube video */
-iframe {
-  position: relative;
-  top: 70rem;
-  left: 0;
-  width: 100%;
-  height: 40vh;
-  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
-  z-index: 1;
+.video {
+width: 100%;
+margin-top: 70rem;
 }
 
 /* Literary Works */
